--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -57,6 +57,11 @@ jobs:
       - name: Generate Application Key
         run: php artisan key:generate
 
+      - name: Clear and cache config
+        run: |
+          php artisan config:clear
+          php artisan config:cache
+
       - name: Wait for MySQL
         run: |
           until mysqladmin ping -h "127.0.0.1" --silent; do
