debug(tests) Add debug step for APP_KEY in CI workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -62,6 +62,9 @@ jobs:
           php artisan config:clear
           php artisan config:cache
 
+      - name: Debug APP_KEY
+        run: 'php -r "echo env(''APP_KEY'') ?: ''APP_KEY not loaded'';"'
+
       - name: Wait for MySQL
         run: |
           until mysqladmin ping -h "127.0.0.1" --silent; do
